# llm-home-lab

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Local_LLM_Orchestrator_Concept.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
.plan/: config.yaml
.plan/issues/: 20260707-program-roadmap-and-sequencing.md
config/: alert_rules.json
docs/: README.md  security-baseline.md
docs/adr/: 0001-python-as-implementation-language.md  0002-sqlite-for-session-storage.md  0003-lmstudio-backend-always-streams-internally.md  0004-persist-node-registry-no-auto-deregistration.md  0005-lms-cli-for-external-node-load-visibility.md  0006-background-health-poller.md
docs/ideas/: 20260720-model-driven-node-delegation.md  README.md  deployment-model.md  operator-observability-dashboards.md
docs/llm/: AGENT_PROTOCOL.md  DECISION_RULES.md  DOC_GUIDELINES.md  TEMPLATES.md
docs/plans/: 20260711-orchestrator-program.md  20260717-context-cache-and-compaction.md  20260717-failover-and-health-policy.md  20260717-multi-node-registry-and-scheduler.md  20260717-policy-routing-engine.md  20260717-security-and-governance-baseline.md  20260717-session-manager-core.md  20260717-tool-state-abstraction.md  20260717-workspace-state-capture.md  20260719-monitoring-slos-and-alerting.md  20260719-tui-operator-dashboard.md  20260719-web-management-ui.md  (+10 more)
scripts/: demo_workload.py
tests/: registry_test_helpers.py  test_alert_evaluator.py  test_alerts_endpoint.py  test_api_key_store.py  test_auth_middleware.py  test_capacity_scheduling.py  test_context_assembler.py  test_context_cache.py  test_dashboard_app.py  test_dashboard_health_probing.py  test_diagnostics_client.py  test_external_load_probe.py  test_failover.py  test_gateway.py  test_health.py  test_health_monitor.py  test_health_poller.py  test_host_registry.py  test_least_loaded_routing.py  test_lmstudio_backend.py  test_main.py  test_metrics_endpoint.py  test_metrics_parser.py  test_metrics_registry.py  test_model_availability.py  test_node_registry_endpoints.py  test_rotate_keys.py  test_routing_engine.py  test_scheduling_queue.py  test_session_manager.py  test_tool_state_manager.py  test_tui_load_history.py  test_tui_rates.py  test_workspace_manager.py
(+143 files in other folders)
