[project]
name = "llm-home-lab"
version = "0.1.0"
description = "Local LLM orchestrator: one OpenAI-compatible API gateway, many local model backends."
readme = "README.md"
authors = [
    { name = "Michał Sipa", email = "msipa@lulu.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "pydantic>=2.10",
]

[project.optional-dependencies]
tui = ["textual>=0.60"]

[project.scripts]
llm-home-lab = "llm_home_lab.main:run"
llm-home-lab-rotate-key = "llm_home_lab.security.rotate_keys:main"
llm-home-lab-tui = "llm_home_lab.tui.app:run"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=7.0",
    "pre-commit>=3.8",
    "ruff>=0.9",
    "mypy>=1.14",
]

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["llm_home_lab"]
combine-as-imports = true
split-on-trailing-comma = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
